--- a/frontend/templates/inventory/inventory_list.html
+++ b/frontend/templates/inventory/inventory_list.html
@@ -499,9 +499,9 @@
                                             class="angle fe fe-chevron-right"></i></a>
                                     <ul class="slide-menu">
                                         <li class="side-menu-label1"><a href="javascript:void(0)">مدیریت گردش محصول</a></li>
-                                        <li><a class="slide-item" href="empty.html">ثبت ورودی کالا در انبار</a></li>
-                                        <li><a class="slide-item" href="empty.html">ثبت خروجی کالا در انبار</a></li>
-                                        <li><a class="slide-item" href="empty.html">تاریخچه گردش کالاها</a></li>
+                                        <li><a class="slide-item" href="../manage/new_product_input.html">ثبت ورودی کالا در انبار</a></li>
+                                        <li><a class="slide-item" href="../manage/new_product_output.html">ثبت خروجی کالا در انبار</a></li>
+                                        <li><a class="slide-item" href="../manage/history.html">تاریخچه گردش کالاها</a></li>
                                     </ul>
                                 </li>
                                 <li class="slide">
@@ -513,10 +513,10 @@
                                         <li class="side-menu-label1"><a href="javascript:void(0)">مدیریت انبار</a></li>
                                         <li><a class="slide-item" href="../inventory/inventory_list.html">فهرست انبار ها</a></li>
                                         <li><a class="slide-item" href="../inventory/add_inventory.html">ایجاد انبار</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست دسته بندی انبار ها</a></li>
-                                        <li><a class="slide-item" href="empty.html">ایجاد دسته بندی انبار</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست انبار دار ها</a></li>
-                                        <li><a class="slide-item" href="empty.html">تعریف انبار دار جدید</a></li>
+                                        <li><a class="slide-item" href="../inventory/category_list.html">فهرست دسته بندی انبار ها</a></li>
+                                        <li><a class="slide-item" href="../inventory/create_category.html">ایجاد دسته بندی انبار</a></li>
+                                        <li><a class="slide-item" href="../inventory/manager_list.html">فهرست انبار دار ها</a></li>
+                                        <li><a class="slide-item" href="../inventory/new_manager.html">تعریف انبار دار جدید</a></li>
                                     </ul>
                                 </li>
                                 <li class="slide">
@@ -526,10 +526,10 @@
                                             class="angle fe fe-chevron-right"></i></a>
                                     <ul class="slide-menu">
                                         <li class="side-menu-label1"><a href="javascript:void(0)">مدیریت کالاها</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست کالاها</a></li>
-                                        <li><a class="slide-item" href="empty.html">ایجاد محصول</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست دسته بندی کالاها</a></li>
-                                        <li><a class="slide-item" href="empty.html">ایجاد دسته بندی محصول</a></li>
+                                        <li><a class="slide-item" href="../product/product_list.html">فهرست کالاها</a></li>
+                                        <li><a class="slide-item" href="../product/add_product.html">ایجاد محصول</a></li>
+                                        <li><a class="slide-item" href="../product/product_category_list.html">فهرست دسته بندی کالاها</a></li>
+                                        <li><a class="slide-item" href="../product/create_product_category.html">ایجاد دسته بندی محصول</a></li>
                                     </ul>
                                 </li>
                                 <li class="slide">
@@ -539,8 +539,8 @@
                                             class="angle fe fe-chevron-right"></i></a>
                                     <ul class="slide-menu">
                                         <li class="side-menu-label1"><a href="javascript:void(0)">تامین کنندگان</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست تامین کنندگان</a></li>
-                                        <li><a class="slide-item" href="empty.html">تعریف تامین کننده جدید</a></li>
+                                        <li><a class="slide-item" href="../supplier/supplier_list.html">فهرست تامین کنندگان</a></li>
+                                        <li><a class="slide-item" href="../supplier/add_supplier.html">تعریف تامین کننده جدید</a></li>
                                     </ul>
                                 </li>
                                 <li class="slide">
@@ -550,12 +550,12 @@
                                             class="angle fe fe-chevron-right"></i></a>
                                     <ul class="slide-menu">
                                         <li class="side-menu-label1"><a href="javascript:void(0)">خدمات پرسنلی</a></li>
-                                        <li><a class="slide-item" href="empty.html">محاسبه راندمان کاری پرسنل</a></li>
-                                        <li><a class="slide-item" href="empty.html">پرداختی پرسنل</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست پرسنل سازمان</a></li>
-                                        <li><a class="slide-item" href="empty.html">تعریف پرسنل جدید</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست دپارتمان ها</a></li>
-                                        <li><a class="slide-item" href="empty.html">تعریف دپارتمان جدید</a></li>
+                                        <li><a class="slide-item" href="../personal/calc_randeman.html">محاسبه راندمان کاری پرسنل</a></li>
+                                        <li><a class="slide-item" href="../personal/personal_payment.html">پرداختی پرسنل</a></li>
+                                        <li><a class="slide-item" href="../personal/personal_list.html">فهرست پرسنل سازمان</a></li>
+                                        <li><a class="slide-item" href="../personal/add_personal.html">تعریف پرسنل جدید</a></li>
+                                        <li><a class="slide-item" href="../personal/departman_list.html">فهرست دپارتمان ها</a></li>
+                                        <li><a class="slide-item" href="../personal/create_departman.html">تعریف دپارتمان جدید</a></li>
                                     </ul>
                                 </li>
                             </ul>
