--- a/frontend/templates/manage/history.html
+++ b/frontend/templates/manage/history.html
@@ -6,28 +6,28 @@
     <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport'>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <!-- BOOTSTRAP CSS -->
-    <link href="assets/plugins/bootstrap/css/bootstrap.min.css" id="style" rel="stylesheet"/>
+    <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" id="style" rel="stylesheet"/>
 
     <!-- STYLE CSS -->
-    <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/plugins.css" rel="stylesheet"/>
-    <link href="assets/css/dark-style.css" rel="stylesheet"/>
-    <link href="assets/css/transparent-style.css" rel="stylesheet">
-    <link href="assets/css/skin-modes.css" rel="stylesheet"/>
+    <link href="../assets/css/style.css" rel="stylesheet"/>
+    <link href="../assets/css/plugins.css" rel="stylesheet"/>
+    <link href="../assets/css/dark-style.css" rel="stylesheet"/>
+    <link href="../assets/css/transparent-style.css" rel="stylesheet">
+    <link href="../assets/css/skin-modes.css" rel="stylesheet"/>
 
     <!--- FONT-ICONS CSS -->
-    <link href="assets/css/icons.css" rel="stylesheet"/>
+    <link href="../assets/css/icons.css" rel="stylesheet"/>
 
     <!-- COLOR SKIN CSS -->
-    <link href="assets/colors/color1.css" id="theme" media="all" rel="stylesheet" type="text/css"/>
+    <link href="../assets/colors/color1.css" id="theme" media="all" rel="stylesheet" type="text/css"/>
 
     <!-- INTERNAL Switcher css -->
-    <link href="assets/switcher/css/switcher.css" rel="stylesheet"/>
-    <link href="assets/switcher/demo.css" rel="stylesheet"/>
+    <link href="../assets/switcher/css/switcher.css" rel="stylesheet"/>
+    <link href="../assets/switcher/demo.css" rel="stylesheet"/>
 
 
-    <link href="assets/fonts/styles-fa-num/iran-yekan.css" id="fonts" rel="stylesheet">
-    <link href="assets/css/rtl.css" rel="stylesheet"/>
+    <link href="../assets/fonts/styles-fa-num/iran-yekan.css" id="fonts" rel="stylesheet">
+    <link href="../assets/css/rtl.css" rel="stylesheet"/>
 </head>
 
 <body class="app sidebar-mini rtl">
@@ -184,13 +184,13 @@
                             </div>
                             <div class="switch-toggle d-flex mt-2">
                                 <a class="bg-img1" href="javascript:void(0);" onclick="bgImage(this)"><img
-                                        alt="Bg-Image" id="bgimage1" src="assets/images/media/bg-img1.jpg"></a>
+                                        alt="Bg-Image" id="bgimage1" src="../assets/images/media/bg-img1.jpg"></a>
                                 <a class="bg-img2" href="javascript:void(0);" onclick="bgImage(this)"><img
-                                        alt="Bg-Image" id="bgimage2" src="assets/images/media/bg-img2.jpg"></a>
+                                        alt="Bg-Image" id="bgimage2" src="../assets/images/media/bg-img2.jpg"></a>
                                 <a class="bg-img3" href="javascript:void(0);" onclick="bgImage(this)"><img
-                                        alt="Bg-Image" id="bgimage3" src="assets/images/media/bg-img3.jpg"></a>
+                                        alt="Bg-Image" id="bgimage3" src="../assets/images/media/bg-img3.jpg"></a>
                                 <a class="bg-img4" href="javascript:void(0);" onclick="bgImage(this)"><img
-                                        alt="Bg-Image" id="bgimage4" src="assets/images/media/bg-img4.jpg"></a>
+                                        alt="Bg-Image" id="bgimage4" src="../assets/images/media/bg-img4.jpg"></a>
                             </div>
                         </div>
                     </div>
@@ -431,7 +431,7 @@
 
 <!-- GLOBAL-LOADER -->
 <div id="global-loader">
-    <img alt="Loader" class="loader-img" src="assets/images/loader.svg">
+    <img alt="Loader" class="loader-img" src="../assets/images/loader.svg">
 </div>
 <!-- /GLOBAL-LOADER -->
 
@@ -499,9 +499,9 @@
                                             class="angle fe fe-chevron-right"></i></a>
                                     <ul class="slide-menu">
                                         <li class="side-menu-label1"><a href="javascript:void(0)">مدیریت گردش محصول</a></li>
-                                        <li><a class="slide-item" href="empty.html">ثبت ورودی کالا در انبار</a></li>
-                                        <li><a class="slide-item" href="empty.html">ثبت خروجی کالا در انبار</a></li>
-                                        <li><a class="slide-item" href="empty.html">تاریخچه گردش کالاها</a></li>
+                                        <li><a class="slide-item" href="../manage/new_product_input.html">ثبت ورودی کالا در انبار</a></li>
+                                        <li><a class="slide-item" href="../manage/new_product_output.html">ثبت خروجی کالا در انبار</a></li>
+                                        <li><a class="slide-item" href="../manage/history.html">تاریخچه گردش کالاها</a></li>
                                     </ul>
                                 </li>
                                 <li class="slide">
@@ -513,10 +513,10 @@
                                         <li class="side-menu-label1"><a href="javascript:void(0)">مدیریت انبار</a></li>
                                         <li><a class="slide-item" href="../inventory/inventory_list.html">فهرست انبار ها</a></li>
                                         <li><a class="slide-item" href="../inventory/add_inventory.html">ایجاد انبار</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست دسته بندی انبار ها</a></li>
-                                        <li><a class="slide-item" href="empty.html">ایجاد دسته بندی انبار</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست انبار دار ها</a></li>
-                                        <li><a class="slide-item" href="empty.html">تعریف انبار دار جدید</a></li>
+                                        <li><a class="slide-item" href="../inventory/category_list.html">فهرست دسته بندی انبار ها</a></li>
+                                        <li><a class="slide-item" href="../inventory/create_category.html">ایجاد دسته بندی انبار</a></li>
+                                        <li><a class="slide-item" href="../inventory/manager_list.html">فهرست انبار دار ها</a></li>
+                                        <li><a class="slide-item" href="../inventory/new_manager.html">تعریف انبار دار جدید</a></li>
                                     </ul>
                                 </li>
                                 <li class="slide">
@@ -526,10 +526,10 @@
                                             class="angle fe fe-chevron-right"></i></a>
                                     <ul class="slide-menu">
                                         <li class="side-menu-label1"><a href="javascript:void(0)">مدیریت کالاها</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست کالاها</a></li>
-                                        <li><a class="slide-item" href="empty.html">ایجاد محصول</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست دسته بندی کالاها</a></li>
-                                        <li><a class="slide-item" href="empty.html">ایجاد دسته بندی محصول</a></li>
+                                        <li><a class="slide-item" href="../product/product_list.html">فهرست کالاها</a></li>
+                                        <li><a class="slide-item" href="../product/add_product.html">ایجاد محصول</a></li>
+                                        <li><a class="slide-item" href="../product/product_category_list.html">فهرست دسته بندی کالاها</a></li>
+                                        <li><a class="slide-item" href="../product/create_product_category.html">ایجاد دسته بندی محصول</a></li>
                                     </ul>
                                 </li>
                                 <li class="slide">
@@ -539,8 +539,8 @@
                                             class="angle fe fe-chevron-right"></i></a>
                                     <ul class="slide-menu">
                                         <li class="side-menu-label1"><a href="javascript:void(0)">تامین کنندگان</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست تامین کنندگان</a></li>
-                                        <li><a class="slide-item" href="empty.html">تعریف تامین کننده جدید</a></li>
+                                        <li><a class="slide-item" href="../supplier/supplier_list.html">فهرست تامین کنندگان</a></li>
+                                        <li><a class="slide-item" href="../supplier/add_supplier.html">تعریف تامین کننده جدید</a></li>
                                     </ul>
                                 </li>
                                 <li class="slide">
@@ -550,12 +550,12 @@
                                             class="angle fe fe-chevron-right"></i></a>
                                     <ul class="slide-menu">
                                         <li class="side-menu-label1"><a href="javascript:void(0)">خدمات پرسنلی</a></li>
-                                        <li><a class="slide-item" href="empty.html">محاسبه راندمان کاری پرسنل</a></li>
-                                        <li><a class="slide-item" href="empty.html">پرداختی پرسنل</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست پرسنل سازمان</a></li>
-                                        <li><a class="slide-item" href="empty.html">تعریف پرسنل جدید</a></li>
-                                        <li><a class="slide-item" href="empty.html">فهرست دپارتمان ها</a></li>
-                                        <li><a class="slide-item" href="empty.html">تعریف دپارتمان جدید</a></li>
+                                        <li><a class="slide-item" href="../personal/calc_randeman.html">محاسبه راندمان کاری پرسنل</a></li>
+                                        <li><a class="slide-item" href="../personal/personal_payment.html">پرداختی پرسنل</a></li>
+                                        <li><a class="slide-item" href="../personal/personal_list.html">فهرست پرسنل سازمان</a></li>
+                                        <li><a class="slide-item" href="../personal/add_personal.html">تعریف پرسنل جدید</a></li>
+                                        <li><a class="slide-item" href="../personal/departman_list.html">فهرست دپارتمان ها</a></li>
+                                        <li><a class="slide-item" href="../personal/create_departman.html">تعریف دپارتمان جدید</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -564,9 +564,6 @@
                     <!--/APP-SIDEBAR-->
                 </div>
 
-        <!--app-content open-->
-
-        <!--app-content closed-->
     </div>
 
     <!-- FOOTER -->
@@ -586,43 +583,42 @@
 <a href="#top" id="back-to-top"><i class="fa fa-angle-up"></i></a>
 
 <!-- JQUERY JS -->
-<script src="assets/js/jquery.min.js"></script>
+<script src="../assets/js/jquery.min.js"></script>
 
 <!-- BOOTSTRAP JS -->
-<script src="assets/plugins/bootstrap/js/popper.min.js"></script>
-<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="../assets/plugins/bootstrap/js/popper.min.js"></script>
+<script src="../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- TypeHead js -->
-<script src="assets/plugins/bootstrap5-typehead/autocomplete.js"></script>
-<script src="assets/js/typehead.js"></script>
+<script src="../assets/plugins/bootstrap5-typehead/autocomplete.js"></script>
+<script src="../assets/js/typehead.js"></script>
 
 <!-- Perfect SCROLLBAR JS-->
-<script src="assets/plugins/p-scroll/perfect-scrollbar.js"></script>
-<script src="assets/plugins/p-scroll/pscroll.js"></script>
-<script src="assets/plugins/p-scroll/pscroll-1.js"></script>
+<script src="../assets/plugins/p-scroll/perfect-scrollbar.js"></script>
+<script src="../assets/plugins/p-scroll/pscroll.js"></script>
+<script src="../assets/plugins/p-scroll/pscroll-1.js"></script>
 
 <!-- SIDE-MENU JS -->
-<script src="assets/plugins/sidemenu/sidemenu.js"></script>
+<script src="../assets/plugins/sidemenu/sidemenu.js"></script>
 
 <!-- SIDEBAR JS -->
-<script src="assets/plugins/sidebar/sidebar.js"></script>
+<script src="../assets/plugins/sidebar/sidebar.js"></script>
 
 <!-- Color Theme js -->
-<script src="assets/js/themeColors.js"></script>
+<script src="../assets/js/themeColors.js"></script>
 
 <!-- Sticky js -->
-<script src="assets/js/sticky.js"></script>
+<script src="../assets/js/sticky.js"></script>
 
 <!-- CUSTOM JS -->
-<script src="assets/js/custom.js"></script>
+<script src="../assets/js/custom.js"></script>
 
 <!-- Custom-switcher -->
-<script src="assets/js/custom-swicher.js"></script>
+<script src="../assets/js/custom-swicher.js"></script>
 
 <!-- Switcher js -->
-<script src="assets/switcher/js/switcher.js"></script>
+<script src="../assets/switcher/js/switcher.js"></script>
 
 </body>
-
 
 </html>
