--- a/frontend/templates/inventory/category_list.html
+++ b/frontend/templates/inventory/category_list.html
@@ -8,7 +8,6 @@
     <!-- BOOTSTRAP CSS -->
     <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" id="style" rel="stylesheet"/>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- STYLE CSS -->
     <link href="../assets/css/style.css" rel="stylesheet"/>
     <link href="../assets/css/plugins.css" rel="stylesheet"/>
@@ -566,92 +565,28 @@
                 </div>
 
         <!--app-content open-->
-        <div class="main-content app-content mt-0">
-            <div class="side-app">
-
-                <!-- CONTAINER -->
-                <div class="main-container container-fluid">
-
-                    <!-- PAGE-HEADER -->
-                    <div class="page-header">
-                        <h1 class="page-title">افزودن انبار</h1>
-                        <div>
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="javascript:void(0)">انبار</a></li>
-                                <li aria-current="page" class="breadcrumb-item active">افزودن انبار جدید</li>
-                            </ol>
-                        </div>
-                    </div>
-                    <!-- PAGE-HEADER END -->
-
-                    <!-- ROW-1 OPEN -->
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="card">
-                                <div class="card-header">
-                                    <div class="card-title">افزودن انبار جدید</div>
-                                </div>
-                                <div class="card-body">
-                                    <div class="row mb-4">
-                                        <label class="col-md-3 form-label">نام انبار :</label>
-                                        <div class="col-md-9">
-                                            <input class="form-control invenrory_name" placeholder="نام انبار" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="row mb-4">
-                                        <label class="col-md-3 form-label">موقعیت جفرافیایی انبار :</label>
-                                        <div class="col-md-9">
-                                            <input class="form-control inventory_location" placeholder="موقعیت جغرافیایی انبار" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="row mb-4">
-                                        <label class="col-md-3 form-label">ظرفیت انبار :</label>
-                                        <div class="col-md-9">
-                                            <input class="form-control inventory_capacity" placeholder="ظرفیت انبار" type="number">
-                                        </div>
-                                    </div>
-                                    <div class="row mb-4">
-                                        <label class="col-md-3 form-label">متصدی انبار:</label>
-                                        <div class="col-md-9">
-                                            <select class="form-control form-select select2 inventory_manager" data-bs-placeholder="Select Country"
-                                                    name="country">
-                                                <option value="تست">تست</option>
-                                            </select>
-                                        </div>
-                                    </div>
-
-                                    <div class="row mb-4">
-                                        <label class="col-md-3 form-label">دسته بندی :</label>
-                                        <div class="col-md-9">
-                                            <select class="form-control form-select select2 inventory_category" data-bs-placeholder="Select Country"
-                                                    name="country">
-                                                <option value="br">تست</option>
-                                            </select>
-                                        </div>
-                                    </div>
-
-                                    <!--End Row-->
-                                </div>
-                                <div class="card-footer">
-                                    <!--Row-->
-                                    <div class="row">
-                                        <div class="col-md-3"></div>
-                                        <div class="col-md-9">
-                                            <a class="btn btn-primary add_inventory_btn" href="javascript:void(0)">افزودن انبار</a>
-                                            <a class="btn btn-default float-end" href="javascript:void(0)">انصراف</a>
-                                        </div>
-                                    </div>
-                                    <!--End Row-->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /ROW-1 CLOSED -->
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title">لیست دسته بندی انبار های موجود</h3>
+            </div>
+            <div class="card-body">
+                <a href="../inventory/create_category.html">
+                    <button class="btn btn-primary mb-4" id="table2-new-row-button"> تعریف دسته بندی انبار جدید
+                    </button>
+                </a>
+                <div class="table-responsive">
+                    <table class="table table-bordered border text-nowrap mb-0" id="new-edit">
+                        <thead>
+                        <tr>
+                            <th>نام دسته بندی انبار</th>
+                            <th>توضیحات دسته بندی انبار</th>
+                        </thead>
+                        <tbody class="tbody">
+                        </tbody>
+                    </table>
                 </div>
-                <!-- CONTAINER CLOSED -->
             </div>
         </div>
-        <!--app-content closed-->
         <!--app-content closed-->
     </div>
 
@@ -708,49 +643,36 @@
 <!-- Switcher js -->
 <script src="../assets/switcher/js/switcher.js"></script>
 
-<script>
-    $(document).ready(function() {
-        
-        // Warehouse Form Submission
-        $('.add_inventory_btn').click(function(e) {
-            e.preventDefault();
-            
-            // Get form data
-            const formData = {
-                name: $('.invenrory_name').val(),
-                location: $('.inventory_location').val(),
-                capacity: $('.inventory_capacity').val(),
-                manager: $('.inventory_manager').val(),
-                category: $('.inventory_category').val()
-            };
-
-            // AJAX Request
-            $.ajax({
-                url: 'http://127.0.0.1:8000/inventory/create_new', // Update with your actual endpoint
-                method: 'POST',
-                data: formData,
-                success: function(response) {
-                    Swal.fire({
-                    title: response.message,
-                    icon: response.icon
-                    });
-                },
-                error: function(xhr) {
-                    let errorMessage = 'خطا در ارسال اطلاعات! لطفا مجددا تلاش کنید';
-                    if (xhr.responseJSON && xhr.responseJSON.error) {
-                        errorMessage = xhr.responseJSON.error;
-                    }
-                    alert(errorMessage);
-                },
-                complete: function() {
-                    $btn.prop('disabled', false).html('افزودن انبار');
-                }
-            });
-        });
-    });
-    </script>
-
 </body>
 
+<script>
+$.ajax({
+url: 'http://127.0.0.1:8000/inventory/category_list', 
+method: 'POST',
+success: function(response) {
+    response.message.forEach((category) => {
+            $('.tbody').append(`
+            <tr>
+                <td>${category.name}</td>
+                <td>${category.desc}</td>
+                </td>
+            </tr>
+            `);
+        });
+},
+error: function(xhr) {
+    let errorMessage = 'خطا در ارسال اطلاعات! لطفا مجددا تلاش کنید';
+    if (xhr.responseJSON && xhr.responseJSON.error) {
+        errorMessage = xhr.responseJSON.error;
+    }
+    alert(errorMessage);
+},
+complete: function() {
+    $btn.prop('disabled', false).html('افزودن دسته بندی انبار');
+}
+});
+    $(".tbody").append(`
+`);
+</script>
 
 </html>
