--- a/frontend/templates/inventory/add_inventory.html
+++ b/frontend/templates/inventory/add_inventory.html
@@ -638,7 +638,7 @@
                                         <div class="col-md-3"></div>
                                         <div class="col-md-9">
                                             <a class="btn btn-primary add_inventory_btn" href="javascript:void(0)">افزودن انبار</a>
-                                            <a class="btn btn-default float-end" href="javascript:void(0)">انصراف</a>
+                                            <a class="btn btn-default float-end" href="../dashboard/dashboard.html">انصراف</a>
                                         </div>
                                     </div>
                                     <!--End Row-->
