--- a/frontend/templates/inventory/category_list.html
+++ b/frontend/templates/inventory/category_list.html
@@ -567,7 +567,7 @@
         <!--app-content open-->
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">لیست دسته بندی انبار های موجود</h3>
+                <h3 class="card-title">لیست دسته بندی های انبار های موجود</h3>
             </div>
             <div class="card-body">
                 <a href="../inventory/create_category.html">
